--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FinApp</title>
+    <link rel="manifest" href="/FinApp/manifest.json">
+<meta name="theme-color" content="#2563eb">
+
   </head>
   <body>
     <div id="root"></div>
